--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,10 +58,9 @@
                 <h3>Let's get in</h3>
                 <h2>Contact</h2>
                 <br>
-                <p>Hi! My name is Thais and I’m a graphic designer, content creator, artist, ceramist and web developer.
+                <p>Hi! My name is Thais and I'm a graphic designer, content creator, artist, ceramist and web developer.
                     My favorite hobby is learning new hobbies and I love challenging myself to always have a new one.</p>
             </div>
-            <img src="" alt="">
         </div>
         <div class="contact_form">
             <p>Nombre</p>
