--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,6 +62,9 @@
                     My favorite hobby is learning new hobbies and I love challenging myself to always have a new one.</p>
             </div>
         </div>
+        <div class="bg_contact">
+            <img src="../images/casita.jpg" alt="" width="100%">
+        </div>
         <div class="contact_form">
             <p>Nombre</p>
             <p>Apellido</p>
@@ -75,15 +78,19 @@
     </main>
 
     <footer class="footer_grid">
-        <div>
+        <div class="footer_display">
+            <h5>Let's Get Creative Together</h5>
+        </div>
+
+        <div class="footer_display_complete">
             <h5>Let's Get Creative Together</h5>
             <br>
             <h5>Let's Get Creative Together</h5>
             <br>
             <h5>Let's Get Creative Together</h5>
         </div>
-        <div >
-            <ul>
+        <div>
+            <ul class="display_socialmedia">
                 <li>
                     <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt=""></a>
                 </li>
