--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -54,17 +54,13 @@
 
     <div class="grid_portfolio">
         <main class="main_portfolio">
-            <div class="text_box_b">
+            <div class="text_box_a">
                     <h2>Check out my</h2>
                     <h3>Portfolio</h3>
                     <br>
                     <p>Great work. Great artist.</p>
             </div>
         </main>
-
-        <div class="container_img">
-            <img class="img" src="./images/casita.jpg" alt="" width="100%">
-        </div>
 
         <section class="sec_a_portfolio">
             <img class="img_portfolio" src="../images/mockup_cartuja.jpg" alt="" width="100%">
@@ -130,15 +126,19 @@
         </marquee>
     </section>
     <footer class="footer_grid">
-        <div>
+        <div class="footer_display">
+            <h5>Let's Get Creative Together</h5>
+        </div>
+
+        <div class="footer_display_complete">
             <h5>Let's Get Creative Together</h5>
             <br>
             <h5>Let's Get Creative Together</h5>
             <br>
             <h5>Let's Get Creative Together</h5>
         </div>
-        <div >
-            <ul>
+        <div>
+            <ul class="display_socialmedia">
                 <li>
                     <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt=""></a>
                 </li>
