--- a/pages/services.html
+++ b/pages/services.html
@@ -115,9 +115,7 @@
             <h2>Web</h2>
             <br>
             <p>You don't need to choose right now. If you're unsure about how you want to work with me.</p>
-            <br>
             <p><strong>Let's chat!</strong></p>
-            <br>
             <p>We can always have a consultation meeting to learn about you're project.</p>
             <div class="button_div">
                 <a class="btn_mine" href="../pages/services.html">Let's Chat</a>
@@ -127,9 +125,7 @@
             <h2>Pottery</h2>
             <br>
             <p>You don't need to choose right now. If you're unsure about how you want to work with me.</p>
-            <br>
             <p><strong>Let's chat!</strong></p>
-            <br>
             <p>We can always have a consultation meeting to learn about you're project.</p>
             <div class="button_div">
                 <a class="btn_mine" href="../pages/services.html">Let's Chat</a>
@@ -146,7 +142,11 @@
         </div>
     </section>
     <footer class="footer_grid">
-        <div>
+        <div class="footer_display">
+            <h5>Let's Get Creative Together</h5>
+        </div>
+
+        <div class="footer_display_complete">
             <h5>Let's Get Creative Together</h5>
             <br>
             <h5>Let's Get Creative Together</h5>
@@ -154,7 +154,7 @@
             <h5>Let's Get Creative Together</h5>
         </div>
         <div>
-            <ul>
+            <ul class="display_socialmedia">
                 <li>
                     <a href="https://www.instagram.com/thaiiis.png/"><img class="socialmedia_icons" src="../images/instagram.png" alt=""></a>
                 </li>
