--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <br>
                 <p> <strong> Check it out! </strong></p>
                 <div class="button_div_c">
-                    <a class="btn_mine" href="./pages/portfolio.html">Let's Go</a>
+                    <a class="btn_mine_c" href="./pages/portfolio.html">Let's Go</a>
                 </div>
             </div>
             <div class="container_img">
