--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -54,7 +54,7 @@
     </header>
 
     <main>
-        <section class="grid_a">
+        <section class="grid_ab_me">
             <div class="text_box_a">
                 <div class="subtitle_a">
                     <h2>Hello!</h2>
