--- a/pages/contact.html
+++ b/pages/contact.html
@@ -71,7 +71,7 @@
             <p>Mail</p>
             <p>Theme</p>
             <p>Message</p>
-            <div class="button_div_c">
+            <div class="button_div">
                 <a class="btn_mine" href="">Send</a>
             </div>
         </div>
