--- a/pages/services.html
+++ b/pages/services.html
@@ -98,7 +98,7 @@
         </marquee>
     </section>
   
-    <section>
+    <section class="sec_design">
         <h2 class="subtitle_b">Design</h2>
         <div class="services_textbox">
             <h4 class="design_services_title">Branding</h4>
@@ -117,9 +117,6 @@
             <p>You don't need to choose right now. If you're unsure about how you want to work with me.</p>
             <p><strong>Let's chat!</strong></p>
             <p>We can always have a consultation meeting to learn about you're project.</p>
-            <div class="button_div">
-                <a class="btn_mine" href="../pages/services.html">Let's Chat</a>
-            </div>
         </div>
         <div class="services_items" >
             <h2>Pottery</h2>
@@ -127,9 +124,6 @@
             <p>You don't need to choose right now. If you're unsure about how you want to work with me.</p>
             <p><strong>Let's chat!</strong></p>
             <p>We can always have a consultation meeting to learn about you're project.</p>
-            <div class="button_div">
-                <a class="btn_mine" href="../pages/services.html">Let's Chat</a>
-            </div>
         </div>
     </section>
 
