--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="container-fluid m-0 p-0 g-0">
         <nav class="navbar navbar-expand-xl navbar-light p-0 main_nav">
             <a href="" class="navbar-brand m-0 p-0">
-                <img src="./images/logo.svg" alt="logo" width="150px" class="align-top"> 
+                <img class="align-top" src="./images/logo.svg" alt="logo" width="150px"> 
                 <span class="hidden">Bootstrap 5</span>
             </a>
             <button
@@ -73,10 +73,10 @@
           </div>
         
         <div class="img_container">
-            <img class="img_carrusel" src="./images/carrusel_1.jpg" alt="" height="500px">
-            <img class="img_carrusel" src="./images/carrusel_2.jpg" alt="" height="500px">
-            <img class="img_carrusel" src="./images/carrusel_3.jpg" alt="" height="500px">
-            <img class="img_carrusel" src="./images/carrusel_4.jpg" alt="" height="500px">
+            <img class="img_carrusel animacion" src="./images/carrusel_1.jpg" alt="" height="500px">
+            <img class="img_carrusel animacion" src="./images/carrusel_2.jpg" alt="" height="500px">
+            <img class="img_carrusel animacion" src="./images/carrusel_3.jpg" alt="" height="500px">
+            <img class="img_carrusel animacion" src="./images/carrusel_4.jpg" alt="" height="500px">
         </div>
     </main>
 
